--- a/index.html
+++ b/index.html
@@ -2,18 +2,42 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Pulsating heart</title>
+  <title>CodePen - Valentine&#39;s Day card</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!-- Happy valentines day --> 
-<!-- Inspired by - https://martijnbrekelmans.com/generative-art/heart-deconstruction/techniques.html -->
-
-<canvas id="canvas"></canvas>
+<body>
+  <div id="card">
+    <center><h1>à Toi Sophia
+Ce site à ton nom va changer chaque heure en ce jour ! et il y'aura un nouveau message pour toi </h1></center>
+    <div class="heart" id="heart1">
+      <div id="half1">
+        <div id="circle"></div>
+        <div id="rec"></div>
+      </div>
+      <div id="half2">
+        <div id="circle"></div>
+        <div id="rec"></div>
+      </div>
+    </div>
+    <div id="message">
+      <h2>Tu es la meilleure rencontre de ma vie je remercie Dieu tous les jours de t'avoir rencontré  !</h2>
+    </div>
+    <div class="heart" id="heart2">
+      <div id="half1">
+        <div id="circle"></div>
+        <div id="rec"></div>
+      </div>
+      <div id="half2">
+        <div id="circle"></div>
+        <div id="rec"></div>
+      </div>
+    </div>
+  </div>
+</body>
 <!-- partial -->
-  <script  src="./script.js"></script>
 
 </body>
 </html>
