--- a/index.html
+++ b/index.html
@@ -2,42 +2,19 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Sophia - Saint Valentin</title>
+  <title>Saphietou</title>
   <link rel="stylesheet" href="./style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<body>
-  <div id="card">
-    <center><h1>à Toi Sophia
-Ce site à ton nom va changer chaque heure en ce jour ! et il y'aura un nouveau message pour toi </h1></center>
-    <div class="heart" id="heart1">
-      <div id="half1">
-        <div id="circle"></div>
-        <div id="rec"></div>
-      </div>
-      <div id="half2">
-        <div id="circle"></div>
-        <div id="rec"></div>
-      </div>
-    </div>
-    <div id="message">
-      <h2>Tu es la meilleure rencontre de ma vie je remercie Dieu tous les jours de t'avoir rencontré  !</h2>
-    </div>
-    <div class="heart" id="heart2">
-      <div id="half1">
-        <div id="circle"></div>
-        <div id="rec"></div>
-      </div>
-      <div id="half2">
-        <div id="circle"></div>
-        <div id="rec"></div>
-      </div>
-    </div>
-  </div>
-</body>
+<p> "Aujourd'hui n'est pas un jour spécial pour moi cependant c'est une occasion de te rappeler l'amour inconditionnel que j'ai pour toi ! il n'y a pas de mots de cadeaux ni d'actes qui peuvent témoigner de ma gratitude et de mon amour envers toi . I LOVE YOU !"</p>
+<p>created with ♥ by
+  <a href="https://twitter.com/@samarkandiy" title="Azik Samarkandiy">@samarkandiy</a>
+:)<span>|</span></p>
 <!-- partial -->
+  <script  src="./script.js"></script>
 
 </body>
 </html>
