--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<p> "Aujourd'hui n'est pas un jour spécial pour moi cependant c'est une occasion de te rappeler l'amour inconditionnel que j'ai pour toi ! il n'y a pas de mots de cadeaux ni d'actes qui peuvent témoigner de ma gratitude et de mon amour envers toi . I LOVE YOU !"</p>
-<p>created with ♥ by
-  <a href="https://twitter.com/@samarkandiy" title="Azik Samarkandiy">@samarkandiy</a>
+<p> "Aujourd'hui n'est pas un jour spécial pour moi<br>
+   cependant c'est une occasion de te rappeler  l'amour<br>
+    inconditionnel<br>
+   que j'ai pour toi ! il n'y a pas de mots<br>
+    de cadeaux ni d'actes qui peuvent<br>
+   témoigner de ma gratitude et de mon amour <br>
+   envers toi . I LOVE YOU !"</p>
+
 :)<span>|</span></p>
 <!-- partial -->
   <script  src="./script.js"></script>
