--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <!-- partial:index.partial.html -->
 <p> "Aujourd'hui n'est pas un jour spécial pour moi<br>
-   cependant c'est une occasion de te rappeler l'amour <br>
-    inconditionnel<br>
+   cependant c'est une occasion de te rappeler
+    l'amour inconditionnel<br>
    que j'ai pour toi ! il n'y a pas de mots<br>
     de cadeaux ni d'actes qui peuvent<br>
    témoigner de ma gratitude et de mon amour <br>
