--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <p> "Aujourd'hui n'est pas un jour spécial pour moi<br>
-   cependant c'est une occasion de te rappeler
+   cependant c'est une occasion de te rappeler<br>
     l'amour inconditionnel<br>
    que j'ai pour toi ! il n'y a pas de mots<br>
     de cadeaux ni d'actes qui peuvent<br>
