--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Saphietou</title>
+  <title>CodePen - Pulsating heart</title>
   <link rel="stylesheet" href="./style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<p> "Aujourd'hui n'est pas un jour spécial pour moi<br>
-   cependant c'est une occasion de te rappeler<br>
-    l'amour inconditionnel<br>
-   que j'ai pour toi ! il n'y a pas de mots<br>
-    de cadeaux ni d'actes qui peuvent<br>
-   témoigner de ma gratitude et de mon amour <br>
-   envers toi . I LOVE YOU !"</p>
+<!-- Happy valentines day --> 
+<!-- Inspired by - https://martijnbrekelmans.com/generative-art/heart-deconstruction/techniques.html -->
 
-:)<span>|</span></p>
+<canvas id="canvas"></canvas>
 <!-- partial -->
   <script  src="./script.js"></script>
 
