--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Pulsating heart</title>
+  <title>CodePen - Drawing with text</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!-- Happy valentines day --> 
-<!-- Inspired by - https://martijnbrekelmans.com/generative-art/heart-deconstruction/techniques.html -->
+<canvas id='canvas'></canvas>
+<span id='info'>Sophia Clique et essaie dessiner tu verras mon message plus vite tu dessinera plus grosses seront les ecritures!<span>
 
-<canvas id="canvas"></canvas>
+<!--
+  Drawing with text:
+
+  -  Click and drag to draw.
+  -  Double click to clear.
+
+  Ported from java at http://www.generative-gestaltung.de
+
+  by Tim Holman - @twholman
+
+-->
 <!-- partial -->
   <script  src="./script.js"></script>
 
