--- a/index.html
+++ b/index.html
@@ -2,26 +2,17 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Drawing with text</title>
+  <title>Saphietou</title>
   <link rel="stylesheet" href="./style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<canvas id='canvas'></canvas>
-<span id='info'>Sophia Clique et essaie dessiner tu verras mon message plus vite tu dessinera plus grosses seront les ecritures!<span>
-
-<!--
-  Drawing with text:
-
-  -  Click and drag to draw.
-  -  Double click to clear.
-
-  Ported from java at http://www.generative-gestaltung.de
-
-  by Tim Holman - @twholman
-
--->
+<p> "Aujourd'hui n'est pas un jour spécial pour moi cependant c'est une occasion de te rappeler l'amour inconditionnel que j'ai pour toi ! il n'y a pas de mots de cadeaux ni d'actes qui peuvent témoigner de ma gratitude et de mon amour envers toi . I LOVE YOU !"</p>
+<p>created with ♥ by
+  <a href="https://twitter.com/@samarkandiy" title="Azik Samarkandiy">@samarkandiy</a>
+:)<span>|</span></p>
 <!-- partial -->
   <script  src="./script.js"></script>
 
