--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     l'amour inconditionnel que j'ai pour toi !<br>
      il n'y a pas de mots de ni de cadeaux <br>
       qui peuvent témoigner de ma gratitude<br>
-       et de mon amour envers toi . I LOVE YOU !"</p>
-<p>created with ♥ by
-  <a href="https://twitter.com/@samarkandiy" title="Azik Samarkandiy">@samarkandiy</a>
-:)<span>|</span></p>
+       et de mon amour envers toi . I LOVE YOU !"</p><br>
+<p>with ♥ by your husband
+
 <!-- partial -->
   <script  src="./script.js"></script>
 
