--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Saphietou</title>
-  <link rel="stylesheet" href="./style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <title>CodePen - Pure  CSS  Responsive Photo Collage</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<p> "Aujourd'hui n'est pas un jour spécial pour moi<br>
-   cependant c'est une occasion de te rappeler<br>
-    l'amour inconditionnel que j'ai pour toi !<br>
-     il n'y a pas de mots de ni de cadeaux <br>
-      qui peuvent témoigner de ma gratitude<br>
-       et de mon amour envers toi . I LOVE YOU !"</p><br>
-<p>with ♥ by your husband
-
+<div class="container">
+		<div class="wrap">
+			<div class="top"></div>
+			<div class="middle"></div>
+			<div class="bottom"></div>
+		</div>
+		<div class="wrap two">
+			<div class="top"></div>
+			<div class="middle"></div>
+			<div class="bottom"></div>
+		</div>
+</div>
 <!-- partial -->
-  <script  src="./script.js"></script>
-
+  
 </body>
 </html>
